# rest-to-mcp-adapter

./: .env.example  .gitignore  ARCHITECTURE.md  BINANCE_SETUP.md  CLAUDE.md  LIBRARY_USAGE.md  MANIFEST.in  ODS_MONITORING.md  PHASE3_QUICK_START.md  PUBLISHING.md  README.md  README.old.md  binance_auth.py  binance_config.json.example  epc.yml  epc_server.py  generate_binance_registry.py  ods_api_monitoring_export.csv  ods_auth_resolver.py  ods_execution_handler.py  ods_monitoring_generator.py  ods_server.py  pyproject.toml  requirements.txt  run_binance_server.py  run_binance_simple.py  test_auth_filter.py  test_auth_filtering.py  test_dataforseo.py
adapter/ingestion/: __init__.py  loader_html.py  loader_openapi.py
adapter/mcp/: tool_generator.py  tool_registry.py
adapter/parsing/: normalizer.py
adapter/pipeline/: __init__.py  ingestion_pipeline.py
adapter/runtime/: __init__.py  auth.py  executor.py  request_builder.py  response.py
adapter/server/: __init__.py  execution_handler.py  server.py  tool_provider.py  transport.py
examples/: basic_usage.py  phase3_runtime_execution.py  phase4_mcp_server.py  registry_filtering.py  selective_tool_generation.py  test_mcp_server.py
tests/: test_ods_conditional_auth.py  test_ods_monitoring_generator.py
