[project]
name = "rest-to-mcp-adapter"
version = "0.1.0"
description = "Convert OpenAPI/REST specifications into MCP (Model Context Protocol) tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pawneet Singh", email = "pawneet@example.com"}
]
maintainers = [
    {name = "Pawneet Singh", email = "pawneet@example.com"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "rest",
    "api",
    "openapi",
    "swagger",
    "llm",
    "ai-tools",
    "anthropic",
    "claude",
    "gpt",
    "api-adapter",
    "rest-to-mcp"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
]

dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "langchain-community>=0.0.20",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/pawneetdev/rest-to-mcp-adapter"
Documentation = "https://github.com/pawneetdev/rest-to-mcp-adapter#readme"
Repository = "https://github.com/pawneetdev/rest-to-mcp-adapter"
Issues = "https://github.com/pawneetdev/rest-to-mcp-adapter/issues"
Changelog = "https://github.com/pawneetdev/rest-to-mcp-adapter/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapter"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
