[project]
name = "rest-to-mcp-adapter"
version = "0.2.0b1"
description = "Convert REST API specifications (OpenAPI 3.x, Swagger 2.x, OpenAPI Actions) into MCP tools for AI agents. Supports JSON and YAML formats."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Pawneet Singh", email = "pawneet.dev@gmail.com"}
]
maintainers = [
    {name = "Pawneet Singh", email = "pawneet.dev@gmail.com"}
]
keywords = [
    "mcp",
    "model-context-protocol",
    "rest",
    "api",
    "openapi",
    "openapi3",
    "swagger",
    "swagger2",
    "openapi-actions",
    "json",
    "yaml",
    "llm",
    "ai-tools",
    "anthropic",
    "claude",
    "gpt",
    "api-adapter",
    "rest-to-mcp",
    "api-specification"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
]

dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "niquests>=3.16.1",
    "polars>=1.36.1",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-community>=0.0.20",
]

[project.urls]
Homepage = "https://github.com/pawneetdev/rest-to-mcp-adapter"
Documentation = "https://github.com/pawneetdev/rest-to-mcp-adapter#readme"
Repository = "https://github.com/pawneetdev/rest-to-mcp-adapter"
Issues = "https://github.com/pawneetdev/rest-to-mcp-adapter/issues"
Changelog = "https://github.com/pawneetdev/rest-to-mcp-adapter/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapter"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
